wrapped projects flexbox and h2 inside of a div and fix clickable image to deployed appication for horiseon project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ body {
   width: 50%;
 }
 /*my projects container*/
-.my-projects {
+.projects-flexbox {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
